--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "dev": "parcel src/index.pug",
     "build:parcel": "parcel build src/index.pug",
-    "build:pug": "pug views -o dist",
-    "build:sass": "sass src/assets/css/styles.scss src/assets/css/styles.css",
+    "build:pug": "pug src -o dist",
+    "build:sass": "sass src/assets/css/styles.scss dist/styles.css",
     "build": "npm run build:parcel && npm run build:pug && run build:sass",
     "deploy": "gh-pages -d dist --add",
     "test": "echo \"Error: no test specified\" && exit 1"
