--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "pec1",
   "version": "1.0.0",
   "scripts": {
-    "dev": "parcel src/index.pug",
-    "build:parcel": "parcel build src/index.pug --public-url /M4.257---Herramientas-HTML-y-CSS---PEC1/ --dist-dir dist",
+    "dev": "parcel src/*.pug",
+    "build:parcel": "parcel build src/*.pug --public-url /M4.257---Herramientas-HTML-y-CSS---PEC1/ --dist-dir dist",
     "build:pug": "npx pug src -o dist",
     "build:sass": "sass src/styles.scss dist/styles.css",
     "build": "npm run build:parcel && npm run build:pug && npm run build:sass",
