--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "npx parcel src/*.pug --open --no-cache",
-    "build:parcel": "parcel build src/*.pug --public-url ./ --dist-dir dist --no-cache",
+    "build:parcel": "parcel build src/*.pug --public-url /M4.257---Herramientas-HTML-y-CSS---PEC1/ --dist-dir dist --no-cache",
     "build:pug": "npx pug src -o dist",
     "build:sass": "parcel build src/styles.scss --dist-dir dist",
     "build": "npm run build:parcel && npm run build:pug && npm run build:sass",
