--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Pug to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -10,19 +10,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18.x'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build Pug files
+      - name: Install Pug CLI
+        run: npm install -g pug-cli
+
+      - name: Build project
         run: npm run build
 
+      - name: Build Pug Files
+        run: npm run build:pug
+
+      - name: Fix permissions
+        run: chmod +x ./node_modules/.bin/pug
+
       - name: Deploy to GitHub Pages
-        run: npm run deploy
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
