--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pec1",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npx parcel src/*.pug\" --open --no-cache",
+    "dev": "npx parcel src/*.pug --open --no-cache",
     "build:parcel": "parcel build src/*.pug --public-url /M4.257---Herramientas-HTML-y-CSS---PEC1/ --dist-dir dist --no-cache",
     "build:pug": "pug src -o dist",
     "build:sass": "npx sass src/styles.scss dist/styles.css",
