--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
     "@parcel/transformer-pug": "^2.13.0",
     "@parcel/transformer-sass": "^2.13.0",
     "gh-pages": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.13.0",
     "rimraf": "^5.0.10"
-  }
+  },
+  "browserslist": [
+    ">0.5%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
