--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "Santiago Martín-Palomo García",
   "scripts": {
-    "dev": "node src/js/imagesToWebP.js && parcel src/*.pug --open --no-cache",
+    "dev": "node src/js/imagesToWebP.js && parcel src/* --open --no-cache",
     "build": "node src/js/imagesToWebP.js && npm run clean && parcel build src/*.pug --public-url /M4.257---Herramientas-HTML-y-CSS---PEC2/ --dist-dir dist --no-cache",
     "deploy": "gh-pages -d dist --add",
     "clean": "rimraf dist .parcel-cache"
@@ -17,7 +17,8 @@
     "gh-pages": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.10",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   },
   "browserslist": [
     ">0.5%",
